<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".TweenedAnimationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/lblTweenedAnimation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_05dp"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:paddingBottom="@dimen/dimen_10dp"
            android:text="@string/label_tweened_animation"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dimen_25dp"
        android:gravity="center_horizontal|bottom">

        <Button
            android:id="@+id/btnStartAnim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_200dp"
            android:background="@drawable/app_button"
            android:text="@string/label_start_animation"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnStopAnim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_200dp"
            android:background="@drawable/app_button"
            android:text="@string/label_stop_animation"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/earthBackLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|end">

        <ImageView
            android:id="@+id/earthBackImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_25dp"
            android:layout_marginEnd="@dimen/dimen_25dp"
            android:contentDescription="@string/desc_earth_image" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sunLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ImageView
            android:id="@+id/sunImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_sun_image" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/earthFrontLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|start">

        <ImageView
            android:id="@+id/earthFrontImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_25dp"
            android:layout_marginEnd="@dimen/dimen_25dp"
            android:contentDescription="@string/desc_earth_image" />

    </RelativeLayout>
</FrameLayout>